scripts/nullness/wpi/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:68: error: (iterating.over.nullable) $$ 1 $$ parkings $$ ( 1570, 1578 ) $$ iterating over possibly-null reference parkings
		for (IParking parking : parkings) {
		                        ^
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:93: error: (dereference.of.nullable) $$ 1 $$ parking.getPlacePool() $$ ( 2247, 2269 ) $$ dereference of possibly-null reference parking.getPlacePool()
		place = parking.getPlacePool().getParkingPlace(getMaxWaitTimeMillis());
		                            ^
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:99: error: (dereference.of.nullable) $$ 1 $$ place $$ ( 2448, 2453 ) $$ dereference of possibly-null reference place
		place.using(getParkTimeMillis());
		^
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:104: error: (dereference.of.nullable) $$ 1 $$ parking.getPlacePool() $$ ( 2580, 2602 ) $$ dereference of possibly-null reference parking.getPlacePool()
		parking.getPlacePool().returnParkingPlace(place);
		                    ^
4 errors
